🎬 mommy deprecates all vmactions actions~

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,23 +4,23 @@ on:
   workflow_dispatch:
     inputs:
       dry_run:
-        description: 'dry run'
+        description: "dry run"
         type: boolean
         default: true
       release_mommy:
-        description: 'create mommy release'
+        description: "create mommy release"
         type: boolean
         default: true
       release_apt:
-        description: 'create apt-mommy release'
+        description: "create apt-mommy release"
         type: boolean
         default: true
       release_aur:
-        description: 'create aur-mommy release'
+        description: "create aur-mommy release"
         type: boolean
         default: true
       release_homebrew:
-        description: 'create homebrew-mommy release'
+        description: "create homebrew-mommy release"
         type: boolean
         default: true
 
@@ -41,10 +41,10 @@ jobs:
       - name: Print inputs
         env:
           DRY_RUN: ${{ github.event.inputs.dry_run }}
-          RELEASE_MOMMY: ${{ github.events.inputs.release_mommy }}
-          RELEASE_APT: ${{ github.events.inputs.release_apt }}
-          RELEASE_AUR: ${{ github.events.inputs.release_aur }}
-          RELEASE_HOMEBREW: ${{ github.events.inputs.release_homebrew }}
+          RELEASE_MOMMY: ${{ github.event.inputs.release_mommy }}
+          RELEASE_APT: ${{ github.event.inputs.release_apt }}
+          RELEASE_AUR: ${{ github.event.inputs.release_aur }}
+          RELEASE_HOMEBREW: ${{ github.event.inputs.release_homebrew }}
         run: |
           printf "dry_run: '%s'\n" "$DRY_RUN"
           printf "release_mommy: '%s'\n" "$RELEASE_MOMMY"
@@ -69,7 +69,7 @@ jobs:
         run: grep -qF "# [${MOMMY_VERSION#v}] -- " CHANGELOG.md
       - name: "Check: Changelog does not contain string 'TODO'"
         if: ${{ github.event.inputs.dry_run == 'false' }}
-        run: '! grep -qF "TODO" CHANGELOG.md'
+        run: '! grep -qF TODO CHANGELOG.md'
       - name: "Check: Release does not already exist"
         if: ${{ github.event.inputs.dry_run == 'false' }}
         run: |
@@ -119,36 +119,35 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install fpm && Build package
-        uses: vmactions/freebsd-vm@v1
+        uses: cross-platform-actions/action@v0.30.0
         with:
-          usesh: true
-          prepare: |
-            set -e
-
+          operating_system: freebsd
+          version: "14.3"
+          run: |
             printf "::group::Install basic packages\n"
-            pkg install -y git gmake
+            sudo pkg install -y git gmake
             printf "::endgroup::\n"
 
             # fpm
               printf "::group::Install fpm: Actually install fpm\n"
-              pkg install -y devel/ruby-gems
-              gem install --no-document fpm
+              sudo pkg install -y devel/ruby-gems
+              sudo gem install --no-document fpm
               printf "::endgroup::\n"
 
               printf "::group::Install fpm: Install gtar (workaround for https://github.com/jordansissel/fpm/pull/1922)\n"
-              pkg install -y gtar
-              mv /usr/bin/tar /usr/bin/bsdtar
-              mv /usr/local/bin/gtar /usr/bin/tar
+              sudo pkg install -y gtar
+              sudo mv /usr/bin/tar /usr/bin/bsdtar
+              sudo mv /usr/local/bin/gtar /usr/bin/tar
               printf "::endgroup::\n"
             # /fpm
 
             printf "::group::Ignore ownership issues\n"
             git config --global --add safe.directory "$GITHUB_WORKSPACE"
             printf "::endgroup::\n"
-          run: |
-            set -e
 
+            printf "::group::Build package\n"
             gmake dist/freebsd
+            printf "::endgroup::\n"
       - name: Upload built package
         uses: actions/upload-artifact@v4
         with:
@@ -162,10 +161,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build package
-        uses: cross-platform-actions/action@v0.24.0
+        uses: cross-platform-actions/action@v0.30.0
         with:
           operating_system: netbsd
-          version: "10.0"
+          version: "10.1"
           run: |
             set -e
             export PATH="/usr/sbin:$PATH"  # Add 'pkg_*' commands to path
@@ -194,29 +193,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install fpm && Build package
-        uses: vmactions/openbsd-vm@v1
+        uses: cross-platform-actions/action@v0.30.0
         with:
-          usesh: true
-          prepare: |
-            set -e
-
+          operating_system: openbsd
+          version: "7.8"
+          run: |
             printf "::group::Install basic packages\n"
-            pkg_add git gmake
+            sudo pkg_add git gmake
             printf "::endgroup::\n"
 
             printf "::group::Install fpm\n"
-            pkg_add "$(pkg_info -Q ruby | grep "^ruby-[0-9]" | tail -n 1)"
-            /usr/local/bin/gem* install --no-document fpm
-            ln -s "$(printf "/usr/local/bin/fpm*\n" | tr ' ' \\n | grep -E '[0-9]+$')" /usr/local/bin/fpm  # Symlink 'fpm' to latest version
+            sudo pkg_add "$(pkg_info -Q ruby | grep "^ruby-[0-9]" | tail -n 1)"
+            sudo /usr/local/bin/gem* install --no-document fpm
+            sudo ln -s "$(printf "%s\n" /usr/local/bin/fpm* | tr " " \\n | grep -E "[0-9]+$")" /usr/local/bin/fpm  # Symlink 'fpm' to latest version
             printf "::endgroup::\n"
 
             printf "::group::Ignore ownership issues\n"
             git config --global --add safe.directory "$GITHUB_WORKSPACE"
             printf "::endgroup::\n"
-          run: |
-            set -e
 
+            printf "::group::Build package\n"
             gmake dist/openbsd
+            printf "::endgroup::\n"
       - name: Upload built package
         uses: actions/upload-artifact@v4
         with:
@@ -243,7 +241,7 @@ jobs:
           path: dist
       - name: Extract release notes
         run: |
-          HEAD="mommy can also be installed using a package manager. [check the readme for more info](https://github.com/fwdekker/mommy/tree/%s#-installation)~"
+          HEAD="$(printf "mommy can also be installed using a package manager. [check the readme for more info](https://github.com/fwdekker/mommy/tree/%s#-installation)~" "$MOMMY_VERSION")"
           BODY="$(awk "/^## \[${MOMMY_VERSION#v}\]/{flag=1;next}; /^## /{flag=0}; {if (flag==1) {print}}" CHANGELOG.md)"
 
           printf "%s\n\n%s\n" "$HEAD" "$BODY" | tee RELEASE_NOTES.md
@@ -253,7 +251,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
           gh release create "$MOMMY_VERSION" \
-            "dist/mommy"* \
+            dist/mommy* \
             --title "$MOMMY_VERSION" \
             --notes-file RELEASE_NOTES.md \
             --target main \
@@ -317,8 +315,8 @@ jobs:
           printf "::endgroup::\n"
 
           printf "::group::Commit changes\n"
-          git config --global user.name "fwdekkerbot"
-          git config --global user.email "bot@fwdekker.com"
+          git config --global user.name fwdekkerbot
+          git config --global user.email bot@fwdekker.com
           git add --all
           git commit -m "🔖 mommy added package mommy $MOMMY_VERSION~"
           printf "::endgroup::\n"
@@ -394,8 +392,8 @@ jobs:
           printf "::endgroup::\n"
 
           printf "::group::Commit update\n"
-          sudo -u build git config --global user.name "fwdekkerbot"
-          sudo -u build git config --global user.email "bot@fwdekker.com"
+          sudo -u build git config --global user.name fwdekkerbot
+          sudo -u build git config --global user.email bot@fwdekker.com
           sudo -u build git add --all
           sudo -u build git commit -m "🔖 mommy updated the build files to mommy $MOMMY_VERSION~" $empty_option
           printf "::endgroup::\n"
@@ -457,8 +455,8 @@ jobs:
           printf "::endgroup::\n"
 
           printf "::group::Commit update\n"
-          git config --global user.name "fwdekkerbot"
-          git config --global user.email "bot@fwdekker.com"
+          git config --global user.name fwdekkerbot
+          git config --global user.email bot@fwdekker.com
           git add --all
           git commit -m "🔖 mommy updated the formula to mommy $MOMMY_VERSION~" $empty_option
           printf "::endgroup::\n"
